# ephemerides

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
source/cpp/: CAboutDialog.cpp  CAboutDialog.ui  CAirMassDockWidget.cpp  CAirMassDockWidget.h  CAirMassDockWidget.ui  CChartDockWidget.cpp  CChartDockWidget.h  CCheckListDialog.ui  CConfigSupport.cpp  CConfigSupport.h  CDateTime.cpp  CDateTime.h  CDeclination.cpp  CDeclination.h  CElevation.h  CEquCoordinates.h  CGeoCoordinates.h  CGeoLocation.h  CHeliocentricCorrectionDockWidget.cpp  CHeliocentricCorrectionDockWidget.h  CHeliocentricCorrectionDockWidget.ui  CJulianDate.cpp  CJulianDate.h  CJulianDateConverterDockWidget.cpp  CJulianDateConverterDockWidget.h  CJulianDateConverterDockWidget.ui  CLatitude.cpp  CLatitude.h  CLongitude.cpp  CLongitude.h  CMainApp.cpp  CMainApp.h  CMainDockWidget.cpp  CMainDockWidget.h  CMainTabWidget.cpp  CMainTabWidget.h  CMainWindow.cpp  CMainWindow.h  CMakeLists.txt  CMoonDockWidget.cpp  (+33 more)
source/cpp/Catalogs/: CMakeLists.txt  Catalogs.cpp
source/cpp/Catalogs/Core/: CCatalog.cpp  CCatalog.h  CCatalogFile.cpp  CCatalogFile.h  CCatalogList.cpp  CCatalogList.h  CCatalogObject.h  CMakeLists.txt  CSource.h
source/cpp/Catalogs/Ui/: CCatalogLoader.cpp  CCatalogLoader.h  CCatalogLoaderDialog.cpp  CCatalogLoaderDialog.h  CCatalogLoaderThread.cpp  CCatalogLoaderThread.h  CMakeLists.txt
source/cpp/Core/: CConfigSupport.cpp  CConfigSupport.h  CCoreApp.cpp  CCoreApp.h  CMakeLists.txt  CSharedData.cpp  CSharedData.h  UtilsQt.cpp  UtilsQt.h
source/cpp/Dialogs/: CAboutDialog.h  CCheckListDialog.cpp  CCheckListDialog.h  CEphemerisUpdater.cpp  CEphemerisUpdater.h  CEphemerisUpdaterDialog.cpp  CEphemerisUpdaterDialog.h  CEphemerisUpdaterThread.cpp  CEphemerisUpdaterThread.h  CSetupDialog.cpp  CSetupDialog.h
source/cpp/DockWidgets/: CAirMassDockWidget.cpp  CAirMassDockWidget.h  CChartDockWidget.cpp  CHeliocentricCorrectionDockWidget.cpp  CHeliocentricCorrectionDockWidget.ui  CMainDockWidget.h  CPropertiesDockWidget.h  CSunDockWidget.h  CSunDockWidget.ui
source/cpp/JSON/: CMakeLists.txt  json.cpp  json.h
source/cpp/JSON/Model/: CArray.h  CLogicValue.h  CMakeLists.txt  CNode.h  CNullObject.h  CNumericValue.h  CObject.h  CPrimitiveValue.h  CTextValue.h
source/cpp/JSON/Parser/: CDriver.cpp  CDriver.h  CIntParser.cpp  CIntParser.h  CLogger.h  CMakeLists.txt  CParser.cpp  CParser.h  CParserError.cpp  CParserError.h  json.yy
source/cpp/JSON/Scanner/: CLexer.cpp  CLexer.h  CLexerError.cpp  CLexerError.h  CMakeLists.txt  CScanner.cpp  CScanner.h  CToken.cpp  CToken.h
source/cpp/JSON/Tests/: CMakeLists.txt  main.cpp  test_CListObject.cpp  test_CLogicValue.cpp  test_CMapObject.cpp  test_CNumericValue.cpp  test_CTextValue.cpp  test_Scanner.cpp
source/cpp/JSON/Utils/: CError.h  CMakeLists.txt  Utils.cpp  Utils.h
source/cpp/Models/: CMakeLists.txt
source/cpp/Models/Constellations/: CConstellation.cpp  CConstellation.h  CMakeLists.txt
source/cpp/Models/SolarSystem/: CMakeLists.txt  CPlanets.cpp
source/cpp/Models/Tests/: CMakeLists.txt  CPlanets_test.cpp  VSOP87_test.cpp  tests_main.cpp
source/cpp/SkyChart/: CAzimuth.h  CBSC1991.cpp  CBSC1991.h  CBound.cpp  CBound.h  CBrightStarCatalogDataset.cpp  CBrightStarCatalogDataset.h  CConstBoundsDataset.cpp  CConstBoundsDataset.h  CElevation.cpp  CEquCoordinates.cpp  CEquCoordinates.h  CEquGridDataset.cpp  CEquGridDataset.h  CMakeLists.txt  CMatrix3.h  CNGC2000.cpp  CNGC2000.h  COrthographicProjection.h  CPlanets.cpp  CPlanets.h  CPoint.h  CPointd.h  CProjection.h  CQuaternion.h  CRightAscension.h  CSkyChartDataset.h  CSkyChartView.cpp  CSkyChartView.h  CSkyObject.h  CStereographicProjection.h  CTransform.h  CTransformd.h  CVector3d.h  SkyChart.cpp  SkyChartUtils.cpp  SkyChartUtils.h  SkyChartUtilsQt.cpp  SkyChartUtilsQt.h  Utils.cpp  (+1 more)
source/cpp/SkyChart/Core/: CAzAltCoordinates.h  CAzimuth.cpp  CEquCoordinates.cpp  CEquCoordinates.h  CJulianDate.cpp  CJulianDate.h  CLatitude.h  CLongitude.cpp  CLongitude.h  CMakeLists.txt  CMatrix3.h  CMatrix3d.h  CPoint.h  CPointd.h  CQuaternion.h  CQuaterniond.h  CRightAscension.cpp  CStereographicProjection.h  CTransform.h  CTransformd.h  CVector3.h  CVector3d.h  SkyChartUtils.cpp  SkyChartUtils.h  Utils.h
source/cpp/SkyChart/Layers/: CMakeLists.txt
source/cpp/SkyChart/Models/: CMakeLists.txt
source/cpp/SkyChart/Projections/: CMakeLists.txt  COrthographicProjection.h  CProjection.h  CStereographicProjection.h
source/cpp/SkyChart/Tables/: CMakeLists.txt
source/cpp/SkyChart/Tests/: CBSC1991_test.cpp  CJulianDate_test.cpp  CLatitude_test.cpp  CLongitude_test.cpp  CMakeLists.txt  CNGC2000_test.cpp  CPoint_test.cpp  CTransform_test.cpp  CVector3_test.cpp  tests_config.h.in  tests_main.cpp
source/cpp/SkyChart/Utils/: CMakeLists.txt  SkyChartUtilsQt.cpp  SkyChartUtilsQt.h
source/cpp/SkyChart/View/: CMakeLists.txt  CSkyChartView.cpp  CSkyChartView.h
source/cpp/Tabs/: CMainTabWidget.cpp  CMainTabWidget.h  CNightlyEphemerisTab.cpp  CNightlyEphemerisTab.h  CNightlyEphemerisTab.ui  CSkyChartTab.cpp  CSkyChartTab.h  CSkyChartTab.ui  CStarEphemerisTab.cpp  CStarEphemerisTab.h  CStarEphemerisTab.ui
source/cpp/Tabs/ItemModels/: CCatalogSelectionModel.cpp  CCatalogSelectionModel.h  CEVEphemerisItemModel.cpp  CEVEphemerisItemModel.h  CEVNightlyEphemerisModel.cpp  (+3 more)
source/cpp/Variables/: CEVNightlyEphemerisSource.cpp  CEVNightlyEphemerisSource.h  CEphemerisBase.cpp  CEphemerisBase.h  CFilter.h  CFilterStack.cpp  CFilterStack.h  CMakeLists.txt  CNightlyEphemeris.cpp  CNightlyEphemeris.h  CVarEphemeris.cpp  CVarEphemeris.h
source/cpp/Widgets/: CMoonWidget.cpp  CMoonWidget.h  CSunWidget.h
source/cpp/constbnd/: constbnd_conv.py  constellation_names.py
source/cpp/elp82/: CMakeLists.txt  elp82.c  elp82.h
source/cpp/vsop87/: tests_conv.py  vsop87.c  vsop87_conv.py
test/: CBSC1991_test.cpp  CDateTime_test.cpp  CJulianDate_test.cpp  CLongitude_test.cpp  CMakeLists.txt  CNGC2000_test.cpp  CPlanets_test.cpp  CPoint_test.cpp  CTransform_test.cpp  CVector3_test.cpp  ELP82_test.cpp  Utils_test.cpp  VSOP87_test.cpp
(+162 files in other folders)
